# ecat_elmo_control

./: CMakeLists.txt  README.md  torque_test.c
shared_include/: shared_data.h
